compiler/pl0/project/tests/ok/char.pl0
PROGRAM MAIN;
VAR B;
BEGIN
    B := 'c';
    write(B)
END.
