compiler/pl0/project/tests/error/invalid_const_type.pl0
PROGRAM MAIN;
CONST C = 'c';
BEGIN
    WRITE(C)
END.
